--- a/src/modules/packages/Bridal/bridalPackage.scss
+++ b/src/modules/packages/Bridal/bridalPackage.scss
@@ -7,7 +7,7 @@
   color: $black;
 
   h1 {
-    font-size: 33px;
+    font-size: 27.5px;
     text-align: center;
     font-weight: bold;
     color: #fff;
@@ -33,7 +33,7 @@
   .bridalImg {
     width: 100%;
     height: 90vw;
-    background-image: url('#{$image-base-url}/bridal.png');
+    background-image: url('#{$image-base-url}/bridal-banner.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -164,10 +164,10 @@
 .imageCarouselWrap {
   padding: 0;
   width: 100%;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 14.5rem;
+  height: 43.1vw;
   border-radius: 4px 4px 0 0;
   @include tablet {
     display: flex;
@@ -336,4 +336,18 @@
 
 .buttonCaption {
   margin: -4rem 0 1rem !important;
+}
+.priceCol {
+  justify-content: center;
+  @include tablet {
+    justify-content: flex-end;
+  }
+}
+.talkWrap {
+  > div {
+    @include tablet {
+      justify-content: flex-start;
+
+    }
+  }
 }
