--- a/src/modules/packages/Bridal/bridalPackage.scss
+++ b/src/modules/packages/Bridal/bridalPackage.scss
@@ -289,7 +289,7 @@
   padding: .5rem;
   z-index: 1;
   @include mobile {
-    display: none;
+    right: -.8px;
   }
 }
 
@@ -297,6 +297,9 @@
   position: relative;
   width: max-content;
   margin-bottom: 2rem;
+  @include tablet {
+    margin-right: 2rem;
+  }
 }
 
 .priceBg {
@@ -341,6 +344,7 @@
   justify-content: center;
   @include tablet {
     justify-content: flex-end;
+    align-items: center;
   }
 }
 .talkWrap {
