--- a/src/components/ImageFade/imageFade.scss
+++ b/src/components/ImageFade/imageFade.scss
@@ -42,8 +42,8 @@
     width: 100%;
     height: 90vw;
     @include tablet {
-      height: 47vw;
-      width: 54.1248rem;
+      width: 50vw;
+      max-width: 54.1248rem;
       height: 35.7142rem;
       background-size: cover;
     }
@@ -55,7 +55,7 @@
       left: 0;
       width: 100%;
       @include height(500);
-      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(67, 67, 67, 0.753));
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(67, 67, 67, 0.753));
     }
   }
 }
