--- a/src/components/ImageFade/imageFade.scss
+++ b/src/components/ImageFade/imageFade.scss
@@ -55,7 +55,7 @@
       left: 0;
       width: 100%;
       @include height(500);
-      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(67, 67, 67, 0.753));
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), transparent, transparent, rgba(67, 67, 67, 0.753));
     }
   }
 }
