Added whitespace wraping for bridal package

--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -1286,6 +1286,7 @@ h1.homeTitle {
   font-family: $frank;
   font-weight: 700;
   color: $white;
+  white-space: nowrap;
   @include fontSize(40);
   line-height: normal;
   margin-bottom: 2rem;
@@ -1297,6 +1298,7 @@ h1.homeTitle {
 }
 
 .brideBannerCopy {
+  text-align: center;
   font-family: $roboto;
   color: $white;
   @include fontSize(18);
